@@ -2,7 +2,7 @@ Source: install-usb-gui
 Section: unknown
 Priority: extra
 Maintainer: Horst Tritremmel <hjt@sidux.com>
-Build-Depends: debhelper (>= 5), autotools-dev, automake1.10, libgtk2.0-dev (>= 2.8.0), libglade2-dev (>= 2.6.0)
+Build-Depends: debhelper (>= 5), autotools-dev, automake1.10, libgtk2.0-dev (>= 2.8.0), libglade2-dev (>= 2.6.0), intltool, imagemagick
 Standards-Version: 3.7.2
 
 Package: install-usb-gui
