@@ -56,6 +56,7 @@ install: build
 
 	# Add here commands to install the package into debian/install-usb-gui.
 	$(MAKE) DESTDIR=$(CURDIR)/debian/install-usb-gui install
+	DESTDIR=$(CURDIR)/debian/install-usb-gui po/make_po.sh install-usb-gui.mo
 
 	mkdir -p debian/install-usb-gui/usr/share/pixmaps
 	convert -geometry 32x32 src/sidux-usb-icon.png \
